[package]
name = "nanoft8"
version = "0.1.0"
edition = "2021"

[dependencies]
macro_find_and_replace = "1.0.0"

[features]
default = []
no_std = []

[dev-dependencies]
rustfft = "6.2.0"
num-complex = "0.4.6"
pulse-simple = "1.0.1"
hound = "3.5.1"
chrono = "0.4.38"

[[example]]
name = "decode_mic"

[[example]]
name = "encode"
